feat: 팀 수정 시 수업 정보도 반영하도록 변경